<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Maître du Donjon"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:padding="5dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:padding="5dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button01"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:text="@string/room_1"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:onClick="onClick"/>

            <ImageButton
                android:id="@+id/button02"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:scaleType="fitCenter"
                 android:padding="5dp"
                android:text="@string/room_2"
                android:onClick="onClick"/>
            <ImageButton
                android:id="@+id/button03"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:text="@string/room_3"
                android:onClick="onClick"/>
            <ImageButton
                android:id="@+id/button04"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:text="@string/room_4"
                android:onClick="onClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/button05"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:text="@string/room_5"
                android:onClick="onClick"/>
            <ImageButton
                android:id="@+id/button06"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:text="@string/room_6"
                android:onClick="onClick"/>
            <ImageButton
                android:id="@+id/button07"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:text="@string/room_7"
                android:onClick="onClick"/>
            <ImageButton
                android:id="@+id/button08"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:text="@string/room_8"
                android:onClick="onClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/button09"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:text="@string/room_9"
                android:onClick="onClick"/>
            <ImageButton
                android:id="@+id/button10"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:text="@string/room_10"
                android:onClick="onClick"/>
            <ImageButton
                android:id="@+id/button11"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:text="@string/room_11"
                android:onClick="onClick"/>
            <ImageButton
                android:id="@+id/button12"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:text="@string/room_12"
                android:onClick="onClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/button13"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:text="@string/room_13"
                android:onClick="onClick"/>
            <ImageButton
                android:id="@+id/button14"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:text="@string/room_14"
                android:onClick="onClick"/>
            <ImageButton
                android:id="@+id/button15"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:text="@string/room_15"
                android:onClick="onClick"/>
            <ImageButton
                android:id="@+id/button16"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/magic"
                android:scaleType="fitCenter"
                android:padding="5dp"
                android:text="@string/room_16"
                android:onClick="onClick"/>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pièces non explorées"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_marginLeft="50dp"/>
                <TextView
                    android:id="@+id/roomLeft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:text="@string/nb_room_left"
                    android:gravity="right"
                    android:layout_marginRight="70dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Puissance"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="50dp"/>
                <TextView
                    android:id="@+id/power"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/power"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:gravity="right"
                    android:layout_marginRight="70dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Points de Vie"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="50dp"
                    />
                <TextView
                    android:id="@+id/life"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lifepoint"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:gravity="right"
                    android:layout_marginRight="70dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:id="@+id/gameStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Résultat combat"
            android:textStyle="bold"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/resultGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_fight"
            android:textSize="20dp"/>
    </LinearLayout>

</LinearLayout>